--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
     "@types/dompurify": "^3.2.0",
+    "baseline-browser-mapping": "^2.9.17",
     "browser-image-compression": "^2.0.2",
+    "caniuse-lite": "^1.0.30001765",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
